# yew-app-tutorial

./: Cargo.toml  README.md  index.scss
src/: app.rs
src-tauri/: tauri.conf.json
