[package]
name = "yew-app-tutorial"
version = "0.1.0"
edition = "2021"
description = "Official YEW tutorial"
readme = "README.md"
repository = "https://github.com/helsing85/yew-app-tutorial"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
